--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -21,7 +21,7 @@ sup { top:    -0.5em;  }
 /* =-=-=-=-=  CHARACTER STYLING  =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
 
 /* If you really want to use that Baskerville ampersand, no matter if it matches
-   with the other typefaces on yout page, please go ahead and uncomment the
+   with the other typefaces on your page, please go ahead and uncomment the
    following lines … */
 .char--ampersand {
   /*
